# innopolis_test

./: .gitignore  readme.md
client/: CMakeLists.txt  main.cpp
client/include/: client.h  tcp_client.h  udp_client.h
client/src/: client.cpp  tcp_client.cpp  udp_client.cpp
server/: CMakeLists.txt  main.cpp
server/include/: numbersprocessor.h  server.h  stringprocessor.h  tcp_server.h  udp_server.h
server/src/: numbersprocessor.cpp  server.cpp  tcp_server.cpp  udp_server.cpp
server/test/: CMakeLists.txt  main.cpp
